--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "eslint --fix ./src/**/*.{js,jsx,ts,tsx,json} && prettier --write ./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}"
   },
   "keywords": [],
   "author": "",
