--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "babel-loader": "^9.1.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint-plugin-react": "^7.34.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.24.3",
@@ -44,6 +51,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
